--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,9 @@
 <h3>Post Form</h3>
 
 <%= form_for(@post) do |f| %>
-  <label>Post title:</label><br>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :title, :placeholder => "Post title" %><br>
 
-  <label>Post Description</label><br>
-  <%= f.text_area :description %><br>
+  <%= f.text_area :description, :placeholder => "Post description" %><br>
   
   <%= f.submit %>
 <% end %>
