--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,7 @@
 <%= form_tag posts_path do %>
-  <label>Post title:</label><br>
-  <%= text_field_tag :title %><br>
+  <%= text_field_tag :title, nil, placeholder: 'Post title' %><br>
 
-  <label>Post Description</label><br>
-  <%= text_area_tag :description %><br>
+  <%= text_area_tag :description, nil, placeholder: 'Post description' %><br>
 
   <%= submit_tag "Submit Post" %>
 <% end %>
